--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,10 @@
 version: "3"
 
 services:
-  vladslaves-backend:
+  CalcPiGRPC:
     build: .
     restart: always
-    container_name: vladslaves-backend
+    container_name: CalcPiGRPC
     ports:
       - '8080:8080'
 
