--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,9 @@
 version: "3"
 
 services:
-  CalcPiGRPC:
+  grpc-backend:
     build: .
     restart: always
-    container_name: CalcPiGRPC
+    container_name: grpc-backend
     ports:
       - '8080:8080'
